--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
   },
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
-    "@fastify/mysql": "^4.0.0",
-    "@fastify/sensible": "^4.1.0",
-    "fastify": "^4.0.0-rc.2",
-    "fastify-cli": "^4.0.0",
-    "fastify-plugin": "^3.0.0",
     "@fastify/cors": "^8.0.0",
-    "@fastify/mysql": "^4.0.0",
+    "@fastify/jwt": "^6.1.0",
     "@fastify/sensible": "^4.1.0",
     "bcrypt": "^5.0.1",
     "db-migrate": "^0.11.13",
@@ -23,6 +18,7 @@
     "fastify": "^4.0.0-rc.2",
     "fastify-cli": "^4.0.0",
     "fastify-plugin": "^3.0.0",
+    "mysql2": "^2.3.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
