--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   },
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
-<<<<<<< HEAD
     "@fastify/mysql": "^4.0.0",
     "@fastify/sensible": "^4.1.0",
     "fastify": "^4.0.0-rc.2",
     "fastify-cli": "^4.0.0",
-    "fastify-plugin": "^3.0.0"
-=======
+    "fastify-plugin": "^3.0.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/mysql": "^4.0.0",
     "@fastify/sensible": "^4.1.0",
@@ -26,7 +24,6 @@
     "fastify-cli": "^4.0.0",
     "fastify-plugin": "^3.0.0",
     "validator": "^13.7.0"
->>>>>>> add crud and nuxt admin
   },
   "devDependencies": {
     "tap": "^16.1.0"
