--- a/front/admin/package.json
+++ b/front/admin/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "glob-parent": "^6.0.2",
+    "nth-check": "^2.1.1",
     "nuxt": "^2.15.8",
     "sass": "^1.52.3",
     "sass-loader": "^10.2.1",
