--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "test"
   },
   "dependencies": {
-    "@fastify/autoload": "^5.0.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/jwt": "^6.1.0",
     "@fastify/sensible": "^4.1.0",
+    "@sinclair/typebox": "^0.23.5",
     "bcrypt": "^5.0.1",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
@@ -19,12 +19,18 @@
     "fastify-cli": "^4.0.0",
     "fastify-plugin": "^3.0.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "tap": "^16.1.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "^17.0.42",
+    "@types/validator": "^13.7.3",
+    "tap": "^16.1.0",
+    "typescript": "^4.7.3"
   },
   "scripts": {
+    "build": "tsc -w app.ts",
     "test": "tap \"test/**/*.test.js\"",
     "start": "fastify start -l info app.js",
     "dev": "fastify start -w -l info -P app.js"
