--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inet-store",
   "version": "1.0.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.js",
+  "main": "src/app.ts",
   "directories": {
     "test": "test"
   },
@@ -30,10 +30,10 @@
     "typescript": "^4.7.3"
   },
   "scripts": {
-    "build": "tsc -w app.ts",
+    "build": "tsc --build -w",
     "test": "tap \"test/**/*.test.js\"",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "start": "fastify start -l info src/app.js",
+    "dev": "fastify start -w -l info -P dist/app.js"
   },
   "repository": {
     "type": "git",
