--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fastify/sensible": "^4.1.0",
     "@sinclair/typebox": "^0.23.5",
     "bcrypt": "^5.0.1",
+    "dayjs": "^1.11.3",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.1",
